[project]
name = "diffusionlight-comfyui"
description = "DiffusionLight (Turbo) implemented in ComfyUI"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/DiffusionLight/DiffusionLight-ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "diffusionlight"
DisplayName = "DiffusionLight-ComfyUI"
Icon = "https://diffusionlight.github.io/assets/images/icon_32x32.png"
